# evalchemy

./: .dockerignore  .gitignore  Makefile  README.md  baseline_setup.py  dcft_requirements.txt  environment.yml  eval.py  eval_tracker.py  pyproject.toml  real_eval.sh  reasoning_csv.sh  reproduced_benchmarks.md  requirements.txt  run_distributed_eval.py  setup.py  task.py  test.py  test_answer_extraction.py  total_eval.sh  try_eval.sh
.github/workflows/: isort.yaml
WizardCoder/src/: humaneval_gen.py
baselines/: aggregators.py  process_single_file.py
baselines/baselines_configs/: starcoder_v2_formatter.yaml  starcoder_v2_splitter.yaml
baselines/core/: constants.py  factories.py  factory_utils.py  file_utils.py  processor.py
baselines/mappers/: core_utils.py  modifiers.py
baselines/mappers/enrichers/: enrichers.py  language_id_enrichers.py  quality_prediction_enrichers_calc_fasttext.py  quality_prediction_enrichers_kenlm_model.py
baselines/mappers/filters/: content_filters.py  metadata_filters.py
chat_benchmarks/: README.md  __init__.py
chat_benchmarks/HumanEval/: eval_instruct.py
chat_benchmarks/HumanEval/utils/: utils.py
chat_benchmarks/IFEval/: README.md  eval_instruct.py  evaluation.py  evaluation_main.py  instructions.py  instructions_registry.py  instructions_test.py  instructions_util.py  run.sh
chat_benchmarks/MBPP/: eval_instruct.py
chat_benchmarks/MTBench/: eval_instruct.py
chat_benchmarks/MTBench/fastchat/: constants.py  conversation.py  utils.py
chat_benchmarks/MixEval/: README.md  eval_instruct.py
chat_benchmarks/MixEval/mix_eval/: compute_metrics.py
chat_benchmarks/RepoBench/: eval_instruct.py
chat_benchmarks/RepoBench/archive_data/: utils.py
chat_benchmarks/WildBench/: eval_instruct.py
chat_benchmarks/WildBench/src/: eval.py  fastchat_conversation.py  unified_infer.py  unified_utils.py
chat_benchmarks/alpaca_eval/: eval_instruct.py
chat_benchmarks/zeroeval/: eval_instruct.py
chat_benchmarks/zeroeval/src/: _TEMPLATES.py  fastchat_conversation.py  task_configs.py  unified_infer.py  unified_utils.py
cluster/: README.md  autoscaler.yaml  prometheus.yaml
database/: README.md  cli.py  config.py  models.py  utils.py
dcft/: README.md  main.py  service_account_credentials.json  view_dataset.py
dcft/data_strategies/: __init__.py  dataset_generation.py  dataset_utils.py  huggingface_utils.py  synthetic_data_manager.py  utils.py  yaml_utils.py
dcft/data_strategies/Airoboros/: airoboros.yaml  utils.py
dcft/data_strategies/Camel/: camel_physics.yaml  utils.py
dcft/data_strategies/Gemma2_ultrafeedback_armorm/: gemma2_ultrafeedback_armorm.yaml
dcft/dataset/: README.md  reannotate.py  watch_gpt_batch.py
dcft/external_repositories/MetaMath/: pyproject.toml
dcft/external_repositories/MetaMath/MetaMath/: eval_gsm8k.py
dcft/external_repositories/MetaMath/MetaMath/code_for_generating_data/: __init__.py
dcft/external_repositories/MetaMath/MetaMath/code_for_generating_data/code/: main_create_backward_questions.py  main_forward_reasoning.py  main_self_verification_new.py  path_init.py
dcft/external_repositories/MetaMath/MetaMath/code_for_generating_data/code/utils/: answer_clean_utils.py  config_utils.py  openai_api_utils.py  parallel_utils_new.py  path_utils.py  recorder.py
dcft/external_repositories/MetaMath/MetaMath/code_for_generating_data/data/: gsm8k_train-cleaned.json
dcft/external_repositories/MetaMath/code_for_generating_data/code/: main_backward_reasoning.py  main_create_backward_questions.py  main_forward_reasoning.py  main_rephrase_question.py  main_self_verification.py
dcft/external_repositories/MetaMath/code_for_generating_data/code/utils/: openai_api_utils.py  parallel_utils.py  path_utils.py
dcft/train/: README.md  benchmarks.md  zero1.json  zero2.json
dcft/utils/: api_request_parallel_processor.py  completions.py
engine/: README.md  dag.py  dataset.py  execute.py  executor.py
engine/examples/: example_function.py  fasttext_with_dclm.yaml  function.yaml
engine/maps/: base_map.py
engine/operators/: __init__.py  configs.py  dag_operator.py  dclm_refinedweb_source.py  function.py  function_operator.py  hashing_utils.py  hf_source.py  hf_source_operator.py  load_preexisting_operator.py  map.py  mix_operator.py  operator.py  registry.py  remove_columns_operator.py  sharding.py
engine/tests/: dummy_functions.py  dummy_source_operator.py  test_execution.py  test_operators.py  test_parse.py
eval/: Dockerfile  README.md  eval.py  eval_tracker.py  task.py  utils.py
eval/chat_benchmarks/: README.md  curator_lm.py  precomputed_hf_lm.py  upload_to_hf_lm.py
eval/database/: README.md
eval/dcft/: main.py
eval/distributed/: README.md  SETUP_CAPELLA.md  SETUP_JURECA.md  SETUP_LEONARDO.md  benchmark_plot.py  launch.py  launch_simple.py  launch_slurm.py  process_shards_capella.sbatch  process_shards_leonardo.sbatch  process_shards_leonardo_tp.sbatch  process_shards_tacc.sbatch  run_cpu_capella.sbatch  run_cpu_tacc.sbatch  run_evaluations_capella.sbatch  run_evaluations_tacc.sbatch  simple_claix.sbatch  simple_jureca.sbatch  simple_tacc.sbatch  simple_zih.sbatch
eval/docker/: build_image.py
eval/engine/: dag.py
eval/examples/: capella_sharded_eval.sbatch  check_sampling_params.py  dp_inference.sh  dp_inference_test.sh  dp_qwen7b_AIME24.sh  dp_qwen7b_AIME24_4gpu.sh  external_inference.py  external_inference_all.py  external_inference_sharded.py  external_inference_sharded_simple.py  external_inference_sharded_vllm.py  external_inference_sharded_vllm_lmeval.py  leonardo_sharded_eval.sbatch  mistral_on_alpaca.sh  mistral_on_many_evals.sh  multi_gpu.sh  openai.sh  process_shard.py  run_distributed_eval.py  sharded_eval.py  sharding_with_ray.py  zih_sharded_AIME.sbatch  zih_sharded_ALL.sbatch  zih_sharded_ALL_job_array.sbatch  zih_sharded_ALL_job_array_no_upload.sbatch
evalchemy/: task.py
evalchemy/examples/: alpaca_diff_annotator.sh  database_logging.sh
src/cluster/: ray-cluster-service-public.yaml
src/database/: config.py
training/bash_scripts/: download_c4_val.sh
(+810 files in other folders)
