[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcft"
version = "0.1.0"
description = "DCFT Training Package"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Core dependencies grouped by functionality
dependencies = [
    # ML and Deep Learning
    "torch",
    "torchvision",
    "transformers>=4.0.0",
    "accelerate[sagemaker]",
    "peft",
    "trl",
    "bitsandbytes",
    "deepspeed",
    "optimum==1.12.0",
    "scikit-learn",
    "scipy",
    "faiss-cpu==1.7.4",
    "sentence-transformers>=2.2.2",
    "lm-eval",  # Added the missing dependency
    
    # Data Processing
    "pandas",
    "numpy",
    "jsonpickle",
    "protobuf",
    "beautifulsoup4",
    "python-box",
    "fastavro",
    "lxml",
    
    # AI Services and APIs
    "openai",
    "anthropic",
    "cohere",
    "google-generativeai",
    "mistralai",
    "google-cloud-aiplatform",
    "sagemaker",
    
    # Cloud and Storage
    "boto3",
    "botocore",
    "gcsfs",
    "fsspec==2024.6.1",
    "google-auth==2.25.1",
    
    # Web and API
    "fastapi>=0.101.0",
    "uvicorn>=0.23.0",
    "aiohttp[speedups]>=3.8",
    "requests>=2.28",
    "httpx",
    "httpx-sse",
    
    # Database
    "sqlalchemy",
    "psycopg[binary]",
    "psycopg2-binary",
    "sqlitedict",
    
    # Utilities
    "tqdm",
    "loguru>=0.7",
    "python-dotenv",
    "shortuuid",
    "tenacity",
    "backoff>=2.2",
    "colorama",
    "joblib",
    
    # Text Processing
    "tiktoken",
    "nltk",
    "sentencepiece",
    "fuzzywuzzy",
    "python-Levenshtein",
    "langdetect",
    
    # Evaluation and Metrics
    "evaluate",
    "codebleu",
    "sacrebleu",
    
    # Development
    "black",
    "fire",
    "asttokens",
    
    # Custom and External
    "bespokelabs-curator@git+https://github.com/bespokelabsai/curator.git@d9ea8c56cb051a5e2417494ef447e641ee966a3a"
]

[project.urls]
Homepage = "https://github.com/yourusername/dcft"
Repository = "https://github.com/yourusername/dcft.git"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]
eval = [
    "alpaca_eval @ file:eval/chat_benchmarks/alpaca_eval",
    "fschat @ file:eval/chat_benchmarks/MTBench",
]

[tool.hatch.build.targets.wheel]
packages = ["dcft", "database"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 120
extend-exclude = '(dcft/external_repositories/alpaca/seed_tasks.jsonl)'

[tool.isort]
profile = "black"
multi_line_output = 3

[project.scripts]
dcft-train = "dcft.train.llamafactory.src.train:main"
db-model-register = "database.cli:model_register_cli"
db-model-get-uuid = "database.cli:model_get_uuid_cli"
db-model-get-metadata = "database.cli:model_get_metadata_cli"
db-dataset-register = "database.cli:dataset_get_uuid_cli"
db-dataset-get-uuid = "database.cli:dataset_get_uuid_cli"
db-dataset-get-metadata = "database.cli:dataset_get_metadata_cli"

[tool.setuptools]
packages = ["dcft"]

[tool.setuptools.package-dir]
dcft = "dcft"
