[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcft"
version = "0.1.0"
description = "DCFT Training Package"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core ML and Deep Learning
    "torch",
    "torchvision",
    "transformers",
    "accelerate",
    "peft",
    "trl",
    "bitsandbytes",
    "deepspeed",
    "sentencepiece",
    "sentence-transformers>=2.2.2",
    "optimum==1.12.0",
    
    # Machine Learning and Scientific Computing
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "faiss-cpu==1.7.4",
    
    # ML Experiment Tracking & Visualization
    "wandb",
    "tensorboard",
    "evaluate",
    
    # NLP & Text Processing
    "nltk",
    "fasttext-wheel",
    "lm-eval",
    "codebleu",
    "sacrebleu",
    "langdetect",
    "fuzzywuzzy",
    "python-Levenshtein",
    
    # Data Processing & Parsing
    "datasets",
    "protobuf",
    "bs4",
    "lxml",
    "fastavro",
    "jsonpickle",
    "hjson",
    "msgpack",
    
    # AI Service Providers
    "openai",
    "anthropic",
    "cohere",
    "google-generativeai",
    "mistralai",
    "reka-api",
    "together",
    "fschat",
    "dashscope",
    
    # Cloud & Storage
    "gcsfs",
    "google-cloud-aiplatform",
    "google-auth==2.25.1",
    "boto3",
    "botocore",
    "sagemaker",
    "fsspec==2024.6.1",
    "hf-transfer",
    "huggingface_hub[cli]",
    
    # Code Analysis & Development
    "black",
    "tree-sitter-python",
    "tree-sitter-java",
    "tree_sitter",
    "asttokens",
    "mypy_extensions",
    
    # Web & API
    "fastapi>=0.101.0",
    "uvicorn>=0.23.0",
    "aiohttp[speedups]>=3.8",
    "httpx",
    "httpx-sse",
    "requests>=2.28",
    "websocket",
    "aiofiles",
    
    # Database
    "sqlalchemy",
    "psycopg[binary]",
    "psycopg2-binary",
    "sqlitedict",
    
    # Utilities
    "tqdm",
    "python-box",
    "fire",
    "tiktoken",
    "ray[default]",
    "backoff>=2.2",
    "docker-pycreds",
    "sentry-sdk",
    "loguru>=0.7",
    "liger-kernel",
    "python-dotenv",
    "shortuuid",
    "tenacity",
    "prettytable",
    "portalocker",
    "tabulate",
    "colorama",
    "termcolor",
    "distro",
    "typing_inspect",
    "py-cpuinfo",
    "jiter",
    "patsy",
    "joblib",
    "threadpoolctl",
    "jmespath",
    "immutabledict",
]

[project.urls]
Homepage = "https://github.com/yourusername/dcft"
Repository = "https://github.com/yourusername/dcft.git"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]
eval = [
    # Using exact package names from their setup files
    "fschat @ file:eval/chat_benchmarks/MTBench",  # Changed to match the likely package name
]

[tool.hatch.build.targets.wheel]
packages = ["dcft", "database"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 120
extend-exclude = '(dcft/external_repositories/alpaca/seed_tasks.jsonl)'

[tool.isort]
profile = "black"
multi_line_output = 3

[project.scripts]
# DCFT scripts
dcft-train = "dcft.train.llamafactory.src.train:main"

# Database scripts
db-model-register = "database.cli:model_register_cli"
db-model-get-uuid = "database.cli:model_get_uuid_cli"
db-model-get-metadata = "database.cli:model_get_metadata_cli"
db-dataset-register = "database.cli:dataset_get_uuid_cli"
db-dataset-get-uuid = "database.cli:dataset_get_uuid_cli"
db-dataset-get-metadata = "database.cli:dataset_get_metadata_cli"

[tool.setuptools]
packages = ["dcft"]

[tool.setuptools.package-dir]
dcft = "dcft"

[tool.setuptools.package-data]
dcft = [
    "external_repositories/code2flow/**/*",
    "external_repositories/airoboros/**/*",
]